CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH};$ENV{CMAKE_MODULE_PATH}")

INCLUDE(UseCMakeModules.cmake)

# Define useful variables
SET(VERSION_MAJOR 1)
SET(VERSION_MINOR 0)
SET(VERSION_PATCH "REVISION")
SET(AUTHOR "Kervala")
SET(PRODUCT "OBJ Tool")
SET(DESCRIPTION "Tool to manage OBJ")
SET(TARGET "objtool")
SET(YEAR "2023-${CURRENT_YEAR}")

PROJECT(${PRODUCT} CXX C)

INIT_DEFAULT_OPTIONS()

SET_OPTION_DEFAULT(WITH_RTTI OFF)

SETUP_DEFAULT_OPTIONS()

INIT_BUILD_FLAGS()

SETUP_BUILD_FLAGS()

SETUP_PREFIX_PATHS(${TARGET})
SETUP_EXTERNAL()

GEN_CONFIG_H()
GEN_REVISION_H()

SETUP_EXTERNAL()

FIND_PACKAGE(MyBoost)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src ${BOOST_INCLUDE_DIRS})

FILE(GLOB HEADER src/*.h)
FILE(GLOB SRC src/*.cpp)

SET_TARGET_CONSOLE_EXECUTABLE(${TARGET} ${SRC} ${HEADER})
SET_TARGET_LABEL(${TARGET} ${PRODUCT})

IF(WITH_PCH)
  ADD_NATIVE_PRECOMPILED_HEADER(${TARGET} ${CMAKE_CURRENT_SOURCE_DIR}/src/common.h ${CMAKE_CURRENT_SOURCE_DIR}/src/common.cpp)
ENDIF()
